--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,6 +29,7 @@ jobs:
         run: |
           pip install -r requirements.txt
           pip install mypy
+          mypy --install-types
           mypy .
           python % python -m unittest ./test/api_test.py
           
