--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -29,7 +29,7 @@ jobs:
         run: |
           pip install -r requirements.txt
           pip install mypy
-          mypy --install-types
+          pip install types-requests
           mypy .
-          python % python -m unittest ./test/api_test.py
+          python -m unittest ./test/api_test.py
           
