Add java sdk initial version

--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -1,5 +1,6 @@
 [versions]
 wirespec = "0.0.0-SNAPSHOT"
+jackson = "2.19.0"
 
 [libraries]
 wirespec_compiler = { module = "community.flock.wirespec.compiler:core-jvm", version.ref = "wirespec" }
