--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -25,6 +25,10 @@ jobs:
         with:
           python-version: 3.12.9
           architecture: x64
+      - name: generate
+        working-directory: ./python
+        run: |
+          ./gradlew wirespec-python
       - name: install
         working-directory: ./python
         run: |
