--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -26,7 +26,7 @@ jobs:
           java-version: '21'
       - name: build
         run: |
-          ./gradlew build
+          ./gradlew :kotlin:build
 
   build-python:
 
