--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -14,6 +14,20 @@ concurrency:
 
 jobs:
 
+  build-java:
+
+    runs-on: ubuntu-latest
+
+    steps:
+      - uses: actions/checkout@v4
+      - uses: actions/setup-java@v4
+        with:
+          distribution: 'temurin'
+          java-version: '21'
+      - name: build
+        run: |
+          ./gradlew :java:build
+
   build-kotlin:
 
     runs-on: ubuntu-latest
