--- a/packages/npm/tsconfig.json
+++ b/packages/npm/tsconfig.json
@@ -5,5 +5,7 @@
     "strict": true,
     "skipLibCheck": true,
     "outDir": "./lib",
-  }
+    "esModuleInterop": true
+  },
+  "include": ["src/**/*", "test/**/*"]
 }
